examples/test/testpolicy17578.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17578
  namespace: namespace86
spec:
  podSelector:
    matchLabels:
      key44: value21
      key30: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value48
          key37: value36
          key33: value7
      podSelector:
        matchLabels:
          key2: value35
          key35: value45
